--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     right:0; 
     background-color: #2F4858;  /*antes #00171f*/
     color: #FFFFFF;
+    box-shadow: 2px 2px 20px #33658a;
 
     /* https://coolors.co/ffffff-00171f-003459-007ea7-00a8e8 paleta de colores vieja*/
     /* https://coolors.co/2f4858-33658a-86bbd8-f6ae2d-f26419 */
@@ -42,13 +43,21 @@
      width: 100%;
      max-width: 85%;  
      margin: 0 auto; 
+     text-align: justify;       
      /*aca cambiar toda la pagina el tamaño  estaba antes en 850px*/
  }
 
  div.container img{
      width: 100%;
+     border-radius: 0 0 10px 10px;
 
  }      
+
+ div.container img:hover{
+    width: 100%;
+    box-shadow: 3px 5px 5px #33658a;
+    transition-duration: 1s;
+}
  .name-nav-list{ /* ordena el menu separando */
     align-items: center;
     justify-content: space-between;
@@ -86,13 +95,13 @@
     padding: 0.5rem 1rem;
     transition: all 0.3s linear; /* esto animia el meno de navegacion al pasar el mouse */
 }
-.navigation ul li a:hover{
-/* Comentario cambiar color de mouse selecion */
-background:#00A8E8;
+.navigation ul li a:hover{  /*cambiar color de mouse selecion */
+background:#f26419;       /* color de antes  background:#00A8E8; */
+transition-duration: 0.5s;
 }
 
 
-/*tabla*/
+/*        ___________HOME      tabla_________________           */
 
 table {
     border-collapse: collapse;
@@ -111,10 +120,10 @@ th{
         color: white;
 }
   
+ /*          ___________________Productos__________________  */
 
- /*aca ccs de productos  */
- div.bici {
-   /* border: #007EA7 3px solid; */
+  div.bici {
+   /* border: #007EA7 3px solid; si le quieren poner borde la foto */
     float: right; 
      margin: 20px auto;
  }
@@ -124,16 +133,43 @@ th{
     width: 35%;  /*soluciono el problema de formulario*/
     height: auto;
     float: left;
+    border-radius: 10px; 
 }  
+
+div.bici p {
+    padding: 3px;
+
+}
+
+div.bici p:hover {
+    padding: 3px;
+    box-shadow: 3px 5px 5px #33658a;
+    transition-duration: 1s;
+}
+
 
 .flexbox {
     display: flex;
     flex-wrap: wrap;
+    border: #33658a 2px solid;      
+    border-radius: 10px;     
 }
+
+.flexbox:hover {
+    display: flex;
+    flex-wrap: wrap;
+    border: #33658a 2px solid;      
+    border-radius: 10px;               
+    box-shadow: 3px 5px 5px #33658a;
+    transition-duration: 1s;
+}
+
 
 .flexbox-productos {
     margin: 2rem;
     flex: 1 1 320px;
+    text-align: justify;                
+    padding: 5px; 
 }
 
 /* css de contacto*/
@@ -142,7 +178,17 @@ th{
     position: static; /*el fomulario no se suporpoe*/
     margin: 0 auto;
     padding: 1em;
+    border: 2px #33658a solid;
+    border-radius: 10px;
  }
+
+ .contac:hover {
+    border: 2px #33658a solid;
+    border-radius: 10px;
+    box-shadow: 3px 5px 5px #33658a;
+    transition-duration: 1s;
+}
+
 
 h1 {
     text-align: left;
@@ -183,6 +229,14 @@ input[type="submit"] {   /*cambia tamaño de boton enviar*/
     color: white;
 }
 
+input[type="reset"] {   
+    height: 30px;        
+    width:  100px;
+    font-size: 15px;
+    background-color:#2F4858;
+    color: white;
+}
+
 .street   {
     text-align: center;
     font-size: 20px;
@@ -203,5 +257,13 @@ footer{
     color: white;
     background-color: #2F4858;
     height: 3em;
+}
+
+footer:hover{
+    text-align: center;
+    color: #f26419;
+    background-color: #2F4858;
+    height: 3em;
+    transition-duration: 0.5s;
 }
 
